# cresus

./: # SWING TRADING CANDIDATE EVALUATOR (v2).md  .env.example  .env.local.example  .gitignore  API_CONFIGURATION.md  API_CONVERSATIONS.md  BACKTEST_METRICS_GUIDE.md  CLAUDE.md  EXECUTION_PATTERN.md  HERMES_INTEGRATION.md  HOLDINGS_MANAGEMENT.md  IMPORT_FIXES_SUMMARY.md  INDICATOR_VALIDATION_INTEGRATION.md  JOBS_QUICKSTART.sh  MCP_IMPLEMENTATION.md  PORTFOLIO_MANAGEMENT.md  PROJECT_COMPLETION_REPORT.md  QUICK_REFERENCE.txt  README.md  RESTART_API.md  SCREENER_IMPLEMENTATION.md  SHA_COMPLIANCE_REPORT.md  SHA_IMPLEMENTATION_GUIDE.md  STRATEGY_TEMPLATE.md  backtest_detailed.txt  backtest_results.csv  debug_backtest_slicing.py  debug_data_history.py  debug_entry_filter.py  debug_indicators_calculation.py  debug_watchlist_entry.py  pyproject.toml  pytest.ini  test_conversation_api.py  test_formulas.py  test_formulas_fast.py  test_hama_formulas.py  test_mcp_tools.py  test_sha_10.py  test_sha_10_green.py  (+4 more)
.github/: copilot-instructions.md
config/: cresus.yml  cron.yml  portfolios.yml
db-old/local/: portfolios.json
docs/: # SWING TRADING CANDIDATE EVALUATOR.md  AGENT_REFACTORING_COMPLETE.md  ANALYSIS_AGENTS_SUMMARY.md  CLI_AUDIT.md  CLI_REFACTORING_SUMMARY.md  DEBUG_FINDINGS.md  DIAGNOSE_API_404.md  ENTRY_FILTER_AUDIT.md  ENV_CONFIG.md  HEIKIN_ASHI_COMPARISON.md  MCP_SERVICE.md  ORDERS_ANALYTICS_GUIDE.md  PEA_positions_info.md  PORTFOLIO_DETAIL_FEATURES.md  QUANTSTATS_INTEGRATION.md  REFACTORING_CHECKLIST.md  REFACTORING_SUMMARY.md  SCREENER_AGENT_ARCHITECTURE.md  SERVICE_MANAGEMENT.md  WATCHLIST_RANKING_IMPLEMENTATION.md  orders_analysis_agent.md  orders_analytics_display.md  orders_analytics_interpretation.md  portfolio_stats_analyzer.md  research_analysis_architecture.md
front/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
front/src/: App.tsx  CONVERSATION_WIDGET.md  index.css
init/config/: alphas.yml  cresus.yml  cron.yml  mcp.yml
init/hermes/: README.md  config.yaml
init/templates/: bots.yml  jobs.yml  strategy.yml
research/aqr/: README.md  SETUP_INSTRUCTIONS.md  SUMMARY.md  backtest_cac40.ipynb  backtest_cac40_final.ipynb  backtest_detailed.txt  (+7 more)
scripts/: run_mcp_tests.sh
src/: __init__.py
tests/: INDICATOR_TESTING_GUIDE.md  conftest.py  test_conversation.py  test_conversations_api.py  test_formula_dsl_parser.py  test_formula_helpers.py  test_indicator_extractor.py  test_screener.py  test_syntax_checker.py  test_task_manager.py
(+753 files in other folders)
