[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cresus"
version = "0.1.0"
description = "Portfolio management application with FastAPI backend, MCP server, and React frontend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "cmd2>=2.4.0",
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "loguru>=0.7.0",
    "lightgbm>=4.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "pandas==3.0.3",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",
    "pandas-ta-classic>=0.4.47",
    "gspread>=6.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "pyarrow>=12.0.0",
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "watchdog>=3.0.0",
    "apscheduler>=3.10.0",
    "financedatabase>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-watch>=4.2.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
]

# Research & Backtesting
research = [
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
    "numba>=0.54.0",
    "quantstats>=0.0.59",
]

[project.scripts]
cresus = "cli.main:main"
cresus-api = "api.main:main"
cresus-mcp = "cresus_mcp.main:main"
cresus-mcp-server = "cresus_mcp.service:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { where = ["src"] }
